# larkin-mcp

./: .gitignore  .mcp.json  Makefile  README.md
.claude/: settings.local.json
.github/: pr-labeler.yml
.github/workflows/: ci.yaml  deploy-all.yaml  deploy-py.yaml  deploy-rs.yaml  deploy-ts.yaml  release.yaml
py/: .mcp.json  README.md  pyproject.toml
py/.claude/: settings.local.json
py/src/: constants.py  main.py
py/src/prompts/: registry.py
py/src/resources/: registry.py
py/src/resources/content/: tennis.md
py/src/tools/: registry.py
py/src/types/: __init__.py  models.py  tool.py
py/src/util/: resources.py  search.py
py/tests/: __init__.py  conftest.py  test_contracts.py  test_tools.py  test_util.py
resources/: .gitignore  README.md
resources/content/: projects.md
resources/content/resume/: larkin_resume.md
resources/schemas/: resource.schema.json
resources/test-fixtures/: tool-contracts.json
rs/: Cargo.toml
rs/src/: constants.rs  lib.rs  main.rs  resources.rs  schema.rs  server.rs  tools.rs
rs/src/resources/content/: skills.md
scripts/: bump-version.sh  copy-resources.py  copy-resources.sh  publish.sh
tsx/: .mcp.json  README.md  package.json
tsx/src/: constants.ts  index.ts
tsx/src/prompts/: registry.ts
tsx/src/resources/: registry.ts
tsx/src/resources/content/: bio.md  contact.md  work.md
tsx/src/tools/: registry.ts
tsx/src/types/: tool.ts
tsx/src/util/: resources.ts
tsx/tests/: contracts.test.ts  tools.test.ts  util.test.ts
