[tool.flake8]
max-line-length = 120
ignore = ["BLK999", "W503", "PT009"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F", "B", "E501"]
lint.extend-select = ["I"]

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "unit_test: Tests the behavior of one function (unit) in isolation from external infrastructure.",
    "integration_test: Tests the behavior of one function that integrates with external infrastructure.",
    "end_to_end_test: Tests the behavior of a full application, end-to-end."
]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[project]
name = "larkin-mcp"
version = "0.1.0"
description = "A MCP server for asking questions and getting context on John Larkin (johnlarkin1 GH profile, johnlarkin1.github.io)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "John Larkin", email = "johnlarkin1@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.24.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/johnlarkin1/larkin-mcp"
Repository = "https://github.com/johnlarkin1/larkin-mcp"
Documentation = "https://johnlarkin1.github.io"

[project.scripts]
larkin-mcp = "src.main:main"

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/resources/content/**/*",
]
