[package]
name = "larkin-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server providing information about John Larkin"
authors = ["John Larkin"]
license = "MIT"

[[bin]]
name = "larkin-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.11", features = ["server", "transport-io"] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.1"
