[package]
name = "larkin-mcp"
version = "1.0.1"
edition = "2024"
description = "MCP server providing information about John Larkin"
authors = ["John Larkin <john@johnjlarkin.com>"]
license = "MIT"
repository = "https://github.com/johnlarkin1/larkin-mcp"
homepage = "https://github.com/johnlarkin1/larkin-mcp"
readme = "../README.md"
keywords = ["mcp", "model-context-protocol", "llm", "claude", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "larkin-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.11", features = ["server", "transport-io"] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.1"
base64 = "0.22"
